--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-myconnection": "^1.0.4",
+    "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1"
   }
 }
